--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,16 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'edu.emory.cs.utils.Utils'
+    }
+}
+
+task helloWorld {
+    dependsOn jar
+    doLast {
+        println 'Hello world!'
+    }
+}
