--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ jar {
 task commit {
     exec {
         commandLine 'git', 'commit', '--all', '--message', '"good job"'
+        ignoreExitValue true
     }
 }
 
