--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,15 @@ plugins {
 group 'edu.emory.cs'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_12
-targetCompatibility = JavaVersion.VERSION_12
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.13'
 }
 
 jar {
