--- a/build.gradle
+++ b/build.gradle
@@ -18,21 +18,18 @@ plugins { id 'java' }
 group 'edu.emory.cs'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'junit:junit:4.13'
+test {
+    useJUnitPlatform()
 }
 
-//tasks.withType(JavaCompile).each {
-//    it.options.compilerArgs.add('--enable-preview')
-//}
-//
-//test {
-//    jvmArgs(['--enable-preview'])
-//}
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
